# anubhav-lang

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  README_FEATURES.md  build.sh  exported_data.anubhav  temp_export.anubhav  test_output.txt
examples/: array_operations_test.anubhav  arrays.anubhav  comments.anubhav  comprehensive_test.anubhav  functions_simple_test.anubhav  functions_test.anubhav  hello.anubhav  if_then.anubhav  increment.anubhav  loop_control_test.anubhav  modulo.anubhav  print.anubhav  showcase_complete.anubhav  trycatch.anubhav  ultimate_features.anubhav  variables.anubhav  with.anubhav
examples/advanced/: advanced_array_test.anubhav  interpolation_working_test.anubhav  math_module.anubhav  module_test.anubhav  string_interpolation_test.anubhav  string_ops.anubhav  switch.anubhav
examples/basic/: assert.anubhav  calculate.anubhav  combine.anubhav  comparisons.anubhav  for.anubhav  logical.anubhav  math.anubhav  mathfunc.anubhav  minmax.anubhav  multiple.anubhav  not.anubhav  power.anubhav  random.anubhav  repeat.anubhav  while.anubhav
examples/showcase/: advanced_operations.anubhav  comprehensive_test.anubhav  test_new_features.anubhav
src/: interpreter.rs  interpreter_extensions.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/cli/: main.rs
src/core/: extensions.rs  interpreter.rs  mod.rs
src/lang/: lexer.rs  mod.rs  parser.rs
